// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> component should match snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined css-165xn9n"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component size extra-small should match snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined css-1kxdxms"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component size large should match snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined css-1j0at84"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component size medium should match snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined css-rpa2m7"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component size small should match snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined css-165xn9n"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component variant filled should match snapshot 1`] = `
<div>
  <i
    class="material-icons css-165xn9n"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component variant outlined should match snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined css-165xn9n"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component variant round should match snapshot 1`] = `
<div>
  <i
    class="material-icons-round css-165xn9n"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component variant sharp should match snapshot 1`] = `
<div>
  <i
    class="material-icons-sharp css-165xn9n"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> component variant two-tone should match snapshot 1`] = `
<div>
  <i
    class="material-icons-two-tone css-165xn9n"
  >
    accessibility
  </i>
</div>
`;

exports[`<Icon /> css should match snapshot 1`] = `
{
  "color": undefined,
  "fontSize": undefined,
  "verticalAlign": "middle",
}
`;
